# otus_cpp_1_2

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
111/: .travis.yml
build_debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  build.ninja  cmake_install.cmake  ipfilter.ilk  rules.ninja
build_debug/.cmake/api/v1/reply/: cache-v2-ad28502a5d9c90f5f571.json  cmakeFiles-v1-66e6ce45a1ead1e7f1ef.json  codemodel-v2-b8f5ed389e080d1f27e1.json  index-2020-10-19T05-15-31-0122.json  target-ipfilter-Debug-9a300262d62012404573.json  target-test_ipfilter-Debug-1abc1e913ccdd23d45b1.json
includes/: validation.hpp
src/: bad_ip_filter.tsv  ipfilter.hpp  main.cpp  small_ip_filter.tsv  validation.cpp
test/: test_ipfilter.cpp
